# monitor

./: .gitignore  README.md  docker-compose.yaml  pom.xml
backend/axum/: .env  Cargo.toml  README.md  log4rs.yml
backend/axum/src/: lib.rs  main.rs
backend/axum/src/routes/: demo.rs  entity.rs  kafka_router.rs  mod.rs  websocket_server.rs
backend/axum/src/utils/: kafka_utils.rs  mod.rs
backend/axum/tests/: env_test.rs  kafka_router_test.rs  kafka_test.rs  kafka_utils_test.rs  main_test.rs  tracing_test.rs  zookeeper_test.rs
backend/quarks/: pom.xml
backend/quarks/src/main/docker/: Dockerfile.legacy-jar  Dockerfile.native  Dockerfile.native-distroless
backend/quarks/src/main/resources/: application.properties
backend/spring_webflux/: README.md  pom.xml
backend/spring_webflux/src/main/resources/: application-dev.yaml  application-test.yaml  application.yaml  logback.xml
backend/spring_webflux/src/main/resources/db/changelog/: db.changelog-master.yaml
desktop/: README.md  pubspec.yaml
desktop/lib/: main.dart
desktop/lib/components/: MenuDrawer.dart  home.dart  menu_drawer.dart
desktop/lib/components/kafka/: KafkaConfig.dart  KafkaManager.dart  kafka_config.dart  kafka_manager.dart
desktop/lib/customize/: TapDropDown.dart  tap_drop_down.dart
desktop/lib/l10n/: intl_en_US.arb  intl_zh_CN.arb
desktop/lib/model/: KafkaTopicModel.dart  kafka_config.dart  kafka_topic_model.dart
desktop/lib/utils/: Constant.dart  HttpUtils.dart  Log.dart  constant.dart  http_utils.dart
desktop/test/: widget_test.dart
src/main/docker/: Dockerfile.jvm
src/main/java/org/korov/monitor/: WebSocketServer.java
src/main/java/org/korov/monitor/vo/: Result.java  (+1 more)
src/main/resources/: application.properties
src/test/java/org/korov/: ExampleResourceTest.java  NativeExampleResourceIT.java
web/: README.md  index.html  package.json  tsconfig.json  vite.config.ts
web/src/: Home.vue  http-common.ts  main.ts  types.ts
web/src/components/kafka/: Config.vue  Consumer.vue  DataTag.vue  GroupTable.vue  KafkaSelect.vue  Manager.vue  Producer.vue
web/src/components/kafka/manager/: Cluster.vue  Group.vue  Topic.vue
web/src/components/kafka/operate/: Consume.vue  Produce.vue
web/src/components/zookeeper/: Config.vue  ZKTree.vue  ZkConfig.vue
web/src/config/: index.ts
web/src/locales/: i18n.ts
web/src/myrouter/: index.ts
web/src/router/: index.ts
web/src/router/routes/: index.ts
web/src/stores/: nav.ts  routers.ts  store.ts
web/src/styles/: variables.module.scss
(+75 files in other folders)
