[package]
name = "monitor"
version = "0.1.0"
edition = "2021"

[lib]
name = "monitor_lib"
path = "src/lib.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.19"
log4rs = "1.2.0"
axum = "0.6.18"
tokio = { version = "1.29.1", features = ["full"] }
# 使用 tokio 运行时,MySQL 数据库,开启 query! 等宏的支持
sqlx = { version = "0.7", features = [
    "runtime-tokio",
    "mysql",
    "tls-rustls",
    "macros",
] }
futures-util = "0.3.28"
serde = { version = "1.0.166", features = ["derive"] }
serde_json = "1.0.100"

[dev-dependencies]
axum-test = "10.0.0"
