[package]
name = "monitor"
version = "0.1.0"
edition = "2021"

[lib]
name = "monitor_lib"
path = "src/lib.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.21"
log4rs = "1.3.0"
axum = { version = "0.7.5", features = ["ws"] }
tokio = { version = "1.37.0", features = ["full"] }
tower-http = { version = "0.5.2", features = ["cors"] }
# 使用 tokio 运行时,MySQL 数据库,开启 query! 等宏的支持
sqlx = { version = "0.7.4", features = [
    "runtime-tokio",
    "mysql",
    "tls-rustls",
    "macros",
] }
futures-util = "0.3.30"
serde = { version = "1.0.202", features = ["derive"] }
serde_json = "1.0.117"
mime = "0.3.17"
chrono = "0.4.38"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
tracing-appender = "0.2.3"
rdkafka = { version = "0.36.2", features = ["cmake-build"] }
zookeeper = "0.8.0"

[dev-dependencies]
axum-test-helper = "0.3.0"
